Skeletons for each .tex file but the preamble.

--- a/cpp/docs/src/sections/05_input.tex
+++ b/cpp/docs/src/sections/05_input.tex
@@ -1,6 +1,6 @@
 % ============================================================
-% Section 02 - Theoretical Background
+% Section 05 - Input Parameters
 % ============================================================
 
-\section{Theoretical Background}
-\label{sec:theory}
+\section{Input Parameters}
+\label{sec:input}
