Comments for contents of each section

--- a/cpp/docs/src/sections/04_installation.tex
+++ b/cpp/docs/src/sections/04_installation.tex
@@ -4,3 +4,6 @@
 
 \section{Installation and Setup}
 \label{sec:installation}
+
+% Instructions for CMake builds and/or Docker builds
+% Dependencies, local build instructions, simple examle run /w input deck
