--- a/cpp/docs/src/sections/07_physics_implementation.tex
+++ b/cpp/docs/src/sections/07_physics_implementation.tex
@@ -4,3 +4,6 @@
 
 \section{Physics Implementations}
 \label{sec:physics_implementations}
+
+% Lattice representation data structs for sites/bonds/neighbors, hamiltonian in code,
+% fermion bag implementation (where it happens, algorithmic flow), observable measurements
