--- a/cpp/docs/src/sections/08_extending.tex
+++ b/cpp/docs/src/sections/08_extending.tex
@@ -4,3 +4,5 @@
 
 \section{Extending and Contributing to the Code}
 \label{sec:extending}
+
+% Adding new models/interactions, adding new observables, adding/changing lattice geometries
