--- a/cpp/docs/src/sections/09_testing.tex
+++ b/cpp/docs/src/sections/09_testing.tex
@@ -4,3 +4,6 @@
 
 \section{Testing and Validation}
 \label{sec:testing}
+
+% Unit tests (scope, how foolproof are they, how to run), small lattice test with known
+% results, compare with analytic models
