--- a/cpp/docs/src/sections/11_appendices.tex
+++ b/cpp/docs/src/sections/11_appendices.tex
@@ -4,3 +4,7 @@
 
 \section{Appendices}
 \label{sec:appendices}
+
+% Physics & programming terms glossary
+% Long algorithmic details and physics derivations
+% Full list of references 
