--- a/cpp/docs/src/main.tex
+++ b/cpp/docs/src/main.tex
@@ -14,8 +14,8 @@
 % Title Page
 \title{\textbf{Fermion Bag Hamiltonian Lattice Field Theory Code Manual}}
 \author{
-  Joseph Buck \and Emilie Huffman
-  \small Department of Physics, Wake Forest University, Winston-Salem, NC
+  Joseph Buck \and Emilie Huffman\small Department of Physics, Wake Forest 
+  University, Winston-Salem, NC
 }
 \date{\today}
 \maketitle
@@ -29,7 +29,7 @@
 \input{sections/02_theory}
 \input{sections/03_software_overview}
 \input{sections/04_installation}
-\input{sections/05_input_deck}
+\input{sections/05_input}
 \input{sections/06_output}
 \input{sections/07_physics_implementation}
 \input{sections/08_extending}
