Data structure descriptions.

--- a/cpp/docs/src/sections/05_input.tex
+++ b/cpp/docs/src/sections/05_input.tex
@@ -6,7 +6,6 @@
 \label{sec:input}
 \sloppy
 
-% Format overview (yaml), parameters and descriptions, environment variables?
 
 % Format
 \subsection{Input File Format}
@@ -17,7 +16,7 @@ There are four primary categories of variables that can be set in these input
 files: control, lattice, configuration, and constants.
 
 
-
+% Input Parameter Descriptions
 \subsection{Input Parameters}
 \begin{itemize}
   \item \texttt{control}
@@ -131,4 +130,5 @@ files: control, lattice, configuration, and constants.
 \end{itemize}
 
 
+% Environment Variable Descriptions
 \subsection{Environment Variables}
